@@ -11,9 +11,10 @@
 
 #include "parson.h"
 #include "data.h"
+#include "devutil.h"
 
 JSON_Value *edgex_redstr_config_json (const iot_data_t *allconf);
 
-edgex_data_client_t *edgex_data_client_new_redstr (const iot_data_t *allconf, iot_logger_t *lc, iot_threadpool_t *queue);
+edgex_data_client_t *edgex_data_client_new_redstr (const iot_data_t *allconf, iot_logger_t *lc, const devsdk_timeout *tm, iot_threadpool_t *queue);
 
 #endif
